--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
     "webpack": "webpack --watch",
+    "webpack:prod": "webpack --env=prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
