--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
+    "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "nodemon": "^1.8.1",
     "postcss-loader": "^2.1.0",
