--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0",
     "debug": "^2.6.3",
     "ejs": "~2.3.3",
+    "jquery": "^3.3.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
