--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon bin/www",
     "dev": "./node_modules/.bin/nodemon bin/www",
-    "prd": "pm2 start bin/www",
+    "prd": "pm2 start bin/www --name chainio",
     "webpack": "webpack --watch",
     "webpack:prod": "webpack --env=prod",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0",
     "debug": "^2.6.3",
     "ejs": "~2.3.3",
+    "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
@@ -26,6 +27,7 @@
     "koa-session2": "^2.2.5",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "lodash": "^4.17.5",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
